--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,9 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-
+.body-bg-color{
+    background-color: #ffc107;
+}
 header{
     background-color:  #ffc107;
     display: flex;
@@ -21,6 +23,9 @@ header img {
    right: -50px;
 }
 
+#container-name-burger > *{
+  padding-bottom: 30px;
+}
 main {
     padding-left: 30px;
 }
@@ -53,15 +58,14 @@ label{
     margin-left: 5px;
 }
 
-.create-prices-btn {
-    margin: 30px 300px 0px 300px;
+.create-prices-btn{
+    margin-top: 45px;
 }
-
 .coupon-container{
-    margin-top: 60px;
+    margin-top: 45px;
 }
 #dis-coupon{
-    width: 600px;
+    width: 500px;
     background-color: rgb(219, 219, 139);
     opacity: .3;
     border-radius: 15px;
@@ -78,5 +82,20 @@ footer{
     font-size: 25px;
     padding-left: 30px;
     padding-right: 30px;
+}
+
+@media all and (max-width: 576px){
+    #dis-coupon{
+        width:150px;
+    }
+    body{
+        text-align:center ;
+    }
+}
+
+@media all and (max-width: 992px){
+    #dis-coupon{
+        width:180px;
+    }
 }
 
