--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-.body-bg-color{
+body{
     background-color: #ffc107;
 }
 header{
@@ -86,7 +86,7 @@ footer{
 
 @media all and (max-width: 576px){
     #dis-coupon{
-        width:150px;
+        width:50px;
     }
     body{
         text-align:center ;
