--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     font-weight: bold;
 }
 body{
-    background-color: #ffc107;
+    background-color: rgb(240, 240, 193);
+
 }
 header{
     background-color:  #ffc107;
@@ -39,8 +40,8 @@ form ul li{
     list-style: none;
 }
 
-.crucial-container {
-    margin: 0px 200px;
+#crucial-container {
+   background-color: white;
 }  
 
 .ingredients {
@@ -65,7 +66,7 @@ label{
     margin-top: 45px;
 }
 #dis-coupon{
-    width: 500px;
+    width: 400px;
     background-color: rgb(219, 219, 139);
     opacity: .3;
     border-radius: 15px;
@@ -74,7 +75,7 @@ label{
 footer{
     background-color:rgb(211, 72, 95);
     height:80px;
-    margin-top: 200px;
+    margin-top: 80px;
     color:white;
     display: flex;
     align-items: center;
